my-apps/productivity/paperless/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-postgres
  namespace: paperless
spec:
  selector:
    app: paperless-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-postgres
  namespace: paperless
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless-postgres
  template:
    metadata:
      labels:
        app: paperless-postgres
    spec:
      enableServiceLinks: false
      containers:
        - name: postgres
          image: docker.io/postgres:16-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
          resources:
            requests:
              memory: 256Mi
              cpu: 50m
            limits:
              memory: 2Gi
              cpu: 1000m
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-postgres
