my-apps/productivity/paperless/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-redis
  namespace: paperless
spec:
  selector:
    app: paperless-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-redis
  namespace: paperless
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless-redis
  template:
    metadata:
      labels:
        app: paperless-redis
    spec:
      enableServiceLinks: false
      containers:
        - name: redis
          image: docker.io/redis:7-alpine
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              memory: 64Mi
              cpu: 10m
            limits:
              memory: 512Mi
              cpu: 500m
