my-apps/productivity/paperless/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  namespace: paperless
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Paperless"
    gethomepage.dev/group: "Productivity"
    gethomepage.dev/icon: "mdi-file-document-outline"
    gethomepage.dev/href: "https://docs.serverops.live"
    gethomepage.dev/pod-selector: "app=paperless"
spec:
  hostnames:
    - docs.serverops.live
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: paperless
          port: 80
          weight: 1
